# crumbeez

./: .gitignore  APPROACHES_COMPARISON.md  Cargo.toml  DESIGN.md  DEVELOPMENT_PLAN.md  README.md  SUMMARIES_DESIGN.md  dev.kdl  plugin.yaml
.cargo/: config.toml
crates/crumbeez-lib/: Cargo.toml
crates/crumbeez-lib/examples/: test_ollama.rs
crates/crumbeez-lib/src/: event_log.rs  lib.rs  summary.rs
crates/crumbeez-lib/src/llm/: config.rs  mod.rs  noop.rs  ollama.rs  openai.rs
crates/zellij-plugin/: Cargo.toml
crates/zellij-plugin/src/: config_io.rs  event_log_io.rs  keystroke.rs  llm_io.rs  main.rs  root_discovery.rs  summarization.rs  summary_io.rs
crates/zellij-plugin/src/pane_content/: mod.rs  processor.rs  tracker.rs
crates/zellij-plugin/src/pane_content/detectors/: control_chars.rs  mod.rs
crates/zellij-plugin/src/pane_content/strategies/: mod.rs  progress.rs  stdio.rs  tui.rs
docs/: event-log-archive.md
scripts/: dev-watch.sh
src/: main.rs  root_discovery.rs
