[package]
name = "crumbeez-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
llm-http = ["reqwest"]

[[example]]
name = "test_ollama"
required-features = ["llm-http"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

